--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 matplotlib
+# for examples
 seaborn
+numpy==1.19.3 # for now, to avoid bug https://stackoverflow.com/questions/64729944/runtimeerror-the-current-numpy-installation-fails-to-pass-a-sanity-check-due-to
